--- a/SortingAlgorithmsTests/SortingAlgorithmsTests.csproj
+++ b/SortingAlgorithmsTests/SortingAlgorithmsTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BubbleSortTests.cs" />
     <Compile Include="MergeSortTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuickSortTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
