--- a/SortingAlgorithms/SortingAlgorithms.csproj
+++ b/SortingAlgorithms/SortingAlgorithms.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BubbleSort.cs" />
+    <Compile Include="BucketSort.cs" />
     <Compile Include="QuickSort.cs" />
+    <Compile Include="SortGenericList.cs" />
     <Compile Include="SortIntList.cs" />
     <Compile Include="ISort.cs" />
     <Compile Include="MergeSort.cs" />
