--- a/SortingAlgorithmsTests/SortingAlgorithmsTests.csproj
+++ b/SortingAlgorithmsTests/SortingAlgorithmsTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BubbleSortTests.cs" />
+    <Compile Include="BucketSortTests.cs" />
     <Compile Include="MergeSortTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSortTests.cs" />
