--- a/SortingAlgorithms/SortingAlgorithms.csproj
+++ b/SortingAlgorithms/SortingAlgorithms.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BubbleSort.cs" />
+    <Compile Include="Static\BubbleSort.cs" />
     <Compile Include="BucketSort.cs" />
     <Compile Include="QuickSort.cs" />
     <Compile Include="SortGenericList.cs" />
@@ -50,5 +50,6 @@
     <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
